--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       *{
         font-family: 'Roboto', sans-serif;
         margin: 0;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
       }
     </style>
     <title>Pizza Delivery App</title>
